Version 0.2.1Kb4

- QRcode for export keys.
- Thread for masternodes processing.
- Exception block on verify signed string.
- Exception block added on signing funcion.
- GetPos command added.
- Added fund verification to masternodes reports.

Version 0.2.1Ka9 to Kb3

- Tests for report node.

Version 0.2.1Ka8

- Added pool solution memo.
- Fixed LeaveCriticalSection on function ZipSumary.
- MNsarray created.
- ReportNode Implemented.

Version 0.2.1Ka7

- Re-verification of IsValidASCII inside VerifySolutionForBlock.

Version 0.2.1Ka6

- Implemented stop pool server variable.
- Implemented secure close of pool server.
- Implemented secure close of node server.
- Improved ExpelPoolInactives execution.
- Fixed maximum reward to a pool step.
- Re-verification on Valid pool steps.
- Added function IsValidASCII.

Version 0.2.1Ka5

- Fixed protocol issue with aliasalreadyexists verification.

Version 0.2.1Ka4

- Romanian language included.
- Bahasa Indonesia language included.
- Default pool deepstep set to 2.
- Added new console command: pooladdress.
- Default pool maxmembers set to 300.
- Now it is possible to decrease max number of members in a pool.
- Added new console command: poolippower.
- Fixed bug on restart when restart.txt is empty.
- Fixed memory leaks from indylaz.
- Added console command: expkeys.
- Implemented GETZIPSUMARY on node server.
- Implemented ZipSumary procedure.
- Implemented NSLORDER on node server.
- Implemented NSLPEND on node server.

