@@ -195,6 +195,7 @@ if UpperCase(Command) = 'LANG' then Language(linetext)
 else if UpperCase(Command) = 'VER' then ConsoleLinesAdd(ProgramVersion+SubVersion)
 else if UpperCase(Command) = 'SERVERON' then StartServer()
 else if UpperCase(Command) = 'SERVEROFF' then StopServer()
+else if UpperCase(Command) = 'FORCESERVER' then ForceServer()
 else if UpperCase(Command) = 'ADDNODE' then AddNode(linetext)
 else if UpperCase(Command) = 'NODES' then ShowNodes()
 else if UpperCase(Command) = 'DELNODE' then DeleteNode(linetext)
